--- a/src/main/resources/i18n/messages_us.properties
+++ b/src/main/resources/i18n/messages_us.properties
@@ -5,13 +5,13 @@ event.add=Event added successfully
 event.update=Event updated successfully
 event.delete=Event deleted successfully
 category.add=Category added successfully
-category.delete=Category delete successfully
-category.update=Category update successfully
+category.delete=Category deleted successfully
+category.update=Category updated successfully
 password.sent=Your password was sent to
 role.add=Role added successfully
 role.delete=Role deleted successfully
 project.add=Project added successfully
-project.update=project update successfully
+project.update=project updated successfully
 project.delete=Project was successfully deleted
 image.attach.project=Image attached to project successfully
 service.add=Services added successfully
