added partners and changed hub

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -27,5 +27,12 @@ sponsorship.delete=Sponsorship deleted successfully
 numbers.add=Numbers added successfully
 numbers.delete=Numbers deleted successfully
 numbers.update=Numbers updated successfully
+hub.add=Hub added successfully
+hub.delete=Hub deleted successfully
+hub.update=Hub updated successfully
+image.attach.hub=Image attached to hub successfully
+partners.add=Partner added successfully
+partners.delete=Partner deleted successfully
+partners.update=Partner updated successfully
 token.expired=Token expired
 password.change=Your password changed successfully
