--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -26,6 +26,6 @@ sponsorship.update=Спонсорство успешно обновлено
 sponsorship.delete=Спонсорство успешно удалено
 numbers.add=Успешно добавленные номера
 numbers.delete=Успешно удаленные номера
-numbers.updated=Номера успешно обновлены
+numbers.update=Номера успешно обновлены
 token.expired=Срок действия токена истек
 password.change=Ваш пароль успешно изменен
