--- a/src/main/resources/i18n/messages_us.properties
+++ b/src/main/resources/i18n/messages_us.properties
@@ -26,6 +26,13 @@ sponsorship.update=Sponsorship updated successfully
 sponsorship.delete=Sponsorship deleted successfully
 numbers.add=Numbers added successfully
 numbers.delete=Numbers deleted successfully
-numbers.updated=Numbers updated successfully
+numbers.update=Numbers updated successfully
+hub.add=Hub added successfully
+hub.delete=Hub deleted successfully
+hub.update=Hub updated successfully
+image.attach.hub=Image attached to hub successfully
+partners.add=Partner added successfully
+partners.delete=Partner deleted successfully
+partners.update=Partner updated successfully
 token.expired=Token expired
 password.change=Your password changed successfully
