--- a/src/main/resources/i18n/messages_kg.properties
+++ b/src/main/resources/i18n/messages_kg.properties
@@ -28,4 +28,11 @@ numbers.add=Сандар ийгиликтүү кошулду
 numbers.delete=Ийгиликтүү өчүрүлгөн сандар
 numbers.update=Сандар ийгиликтүү Жаңыртылды
 token.expired=Токендин мөөнөтү бүттү
-password.change=Сиздин сырсөзүңүз ийгиликтүү өзгөрдү 
+password.change=Сиздин сырсөзүңүз ийгиликтүү өзгөрдү
+hub.add=Хаб ийгиликтүү кошумулду
+hub.update=Хаб ийгиликтүү Жаңыртылды
+hub.delete=Хаб ийгиликтүү өчүрүлдү
+image.attach.hub=Хаб ийгиликтүү хабга тиркелди
+partners.add=Өнөктөш ийгиликтүү кошулду
+partners.update=Өнөктөш ийгиликтүү Жаңыртылды
+partners.delete=Өнөктөш ийгиликтүү өчүрүлдү
