--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -29,3 +29,6 @@ partners.delete=Partner deleted successfully
 partners.update=Partner updated successfully
 token.expired=Token expired
 password.change=Your password changed successfully
+volunteer.accept=Volunteer is successfully accept
+volunteer.rejected=Volunteer is rejected
+volunteer.request=Your request send to admin!
