--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -29,3 +29,6 @@ password.change=Ваш пароль успешно изменен
 partners.add=Партнер успешно добавлен
 partners.update=Партнер успешно обновлен
 partners.delete=Партнер успешно удален
+volunteer.accept=Доброволец успешно принят
+volunteer.rejected=Доброволец отклонен
+volunteer.request=Ваш запрос отправлен администратору!
