--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -32,3 +32,11 @@ password.change=Your password changed successfully
 volunteer.accept=Volunteer is successfully accept
 volunteer.rejected=Volunteer is rejected
 volunteer.request=Your request send to admin!
+image.notfound=Image is not found
+image.already.in.use=Image is already in use!!
+title.not.empty=Title of the activity can't be empty
+content.not.empty=Content of the activity can't be empty
+activity.already.in.use=Activity with this name already exist!
+activity.notfound=Activity wasn't found
+title.activity.already.exist=Title of activity with this name already exist
+
