--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -34,9 +34,23 @@ volunteer.rejected=Volunteer is rejected
 volunteer.request=Your request send to admin!
 image.notfound=Image is not found
 image.already.in.use=Image is already in use!!
-title.not.empty=Title of the activity can't be empty
-content.not.empty=Content of the activity can't be empty
+title.not.empty=Title can't be empty
+content.not.empty=Content can't be empty
 activity.already.in.use=Activity with this name already exist!
 activity.notfound=Activity wasn't found
 title.activity.already.exist=Title of activity with this name already exist
+date.negative=Date of year can't be negative
+incorrect.months=Incorrect input of months
+incorrect.day=Incorrect date of the day
+february.max29=February in leap year should have maximum 29 days
+february.max28=February should have maximum 28 days
+month.max=This month should have maximum 30 days
+incorrect.hour=Incorrect date of hour
+incorrect.minutes=Incorrect date of minutes
+incorrect.seconds=Incorrect date of seconds
+datetime.earlier=DateTime can not be earlier than now!!!
+event.notfound=Event was not found
+news.notfound=News was not found
+numbers.notfound=Numbers was not found
+
 
