--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -52,5 +52,22 @@ datetime.earlier=DateTime can not be earlier than now!!!
 event.notfound=Event was not found
 news.notfound=News was not found
 numbers.notfound=Numbers was not found
-
-
+partners.notfound=Partners with this id wasn't found
+project.notfound=Project was not found
+project.exist=Project with this name already exist
+role.not.empty=Role cannot be empty
+role.exist=This role already exist
+role.notfound=Role with name was not found
+editor.exist=Editor with this email already exist
+email.empty=Your email can't be empty
+email.invalid=Invalid email!
+service.exist=Service already exist
+service.notfound=Service was not found
+sponsorship.notfound=Sponsorship was not found
+inn.empty=INN can't be empty
+bank.empty=Bank can't be empty
+address.empty=Address can't be empty
+payment.empty=Payment account can't be empty
+company.empty=Company name can't be empty
+director.empty=Director can't be empty
+volunteer.notfound=Volunteer was not found
